--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Manrope', sans-serif;
+    /* border: 1px solid red; */
 }
 nav{
     width: 100%;
@@ -11,6 +12,8 @@ nav{
     justify-content: space-between;
     padding: 10px 120px;
     border-bottom: 1px solid black;
+    position: fixed;
+    top: 0;
 }
 nav .links ul{
     display: flex;
@@ -38,13 +41,14 @@ nav button{
     margin-left: 20px;
 }
 .hero .container{
-    height: 65vh;
+    height: 70vh;
     background-color: #FFC017;
     border-bottom: 1px solid black;
 }
 .hero .container h1{
     font-size: 120px;
     margin-bottom: 20px;
+    margin-top: 50px;
 }
 .hero .container .text{
     padding: 50px 120px;
@@ -134,5 +138,107 @@ nav button{
 }
 .grid .box-f{
     display: flex;
+}
+.last .text img{
+    height: 20px;
+    border-radius: 3px;
+}
+.last .text .head h4{
+    font-size: 13px;
+    font-weight: 400;
+    margin-left: 10px;
+}
+.last{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.last .text .head{
+    display: flex;
+    margin-bottom: 15px;
+}
+.last .blogs{
+    width: 55%;
+    margin-right: 70px;
+}
+.last .text{
+    width: 60%;
+}
+.last .text .save{
+    display: flex;
+    width: 95%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+}
+.last .text .save h4{
+    font-size: 13px;
+    font-weight: 400;
+    color: gray;
+}
+.last .text .save i{
+    font-size: 20px;
+    margin-top: -10px;
+}
+.last .blogs .text p{
+    font-size: 16px;
+    color: gray;
+}
+.last .text h3{
+    font-size: 23px;
+    font-weight: 800;
+}
+.last .box{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 70px;
+}
+.last .image img{
+    height: 160px;
+}
+.last{
+    padding-top: 70px;
+    padding-bottom: 70px;
+    padding-left: 120px;
+}
+
+.last .links{
+    width: 40%;
+    position: sticky;
+    top: 120px;
+    z-index: -1;
+    background-color: #fff;
+}
+.last .links .btns{
+    width: 80%;
+    border-bottom: 1px solid rgb(179, 178, 178);
+    padding-bottom: 25px;
+}
+.last .links .btns button{
+    width: fit-content;
+    border: 1px solid rgb(179, 178, 178);
+    background: none;
+    padding: 8px 20px;
+    margin-bottom: 10px;
+    margin-right: 7px;
+    font-size: 13px;
+    color: rgb(136, 135, 135);
+}
+.last .links h3{
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+.last .links .secondary-links{
+    display: flex;
+    width: 75%;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.last .links .secondary-links li{
+    list-style: none;
+    margin-right: 20px;
+    font-size: 13px;
+    margin-bottom: 15px;
 }
     
